# bot

./: .env  .gitignore  .ignore  Cargo.toml  Makefile  README.md  build.rs  expected_output.dot  output.dot  strategy.yaml
docs/: execution-model.puml  main-loop.puml
proto/: query.proto
src/: back_test.rs  bot.rs  controller.rs  dag.rs  dag_flow.rs  data.rs  dto.rs  engine.rs  errors.rs  foo.rs  lib.rs  main.rs  mock_client.rs  plot.rs  query.rs  query_client.rs  query_demo.rs  query_grpc.rs  rest_client.rs  simulation.rs  strategy.rs  time_series.rs
src/strategy/: mod.rs
src/time_series/: core.rs  generic_time_series.rs  join.rs  mod.rs
tests/: back_test.rs  foo.rs  query.rs
utils/: make-help.pl  watch-test.sh
