[package]
name = "luckless"
version = "0.0.2"
authors = ["grahamcrowell <graham.crowell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
petgraph = "0.5.1"
gnuplot = "0.0.37" # sudo apt-get install -y gnuplot
itertools = "0.10.0"
num-traits = { version = "0.2.14", features = ["std"] }
structopt = "0.3.21"

[dev-dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
approx = "0.4.0"
cargo-watch = "7.5.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]